node-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-pod
  labels:
    app: node-app
spec:
  containers:
  - name: my-node-cont
    image: mohamedahmedabdou23994/nodemon-image:latest
    ports:
    - containerPort: 3000
