node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: default
spec:
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
